--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/modal-style.css">
@@ -20,17 +21,20 @@
     <button id="new-task-button" class="modal-button modal-button-confirm">Nova tarefa</button>
     <div class="modal-fade modal-visible" id="modal-fade">
         <div class="modal-body">
-            <h1 class="modal-title modal-margin-bottom">Nova Tarefa</h1>
+            <div class="flex-space-between-align-center modal-margin-bottom">
+                <h1 class="modal-title">Nova Tarefa</h1>
+                <span class="material-symbols-outlined modal-icon" id="modal-close-icon">close</span>
+            </div>
             <div class="modal-field modal-margin-bottom">
-                <label class="modal-label" for="task-title">Título:</label>
+                <label class="modal-label" for="task-title">Título: *</label>
                 <input class="modal-input" type="text" id="task-title">
             </div>
             <div class="modal-field modal-margin-bottom">
                 <label class="modal-label" for="task-description">Descrição:</label>
-                <textarea class="modal-input" id="task-description"></textarea>
+                <textarea class="modal-input modal-text-area" id="task-description"></textarea>
             </div>
             <div class="modal-field modal-button-spacing">
-                <label class="modal-label modal-margin-bottom">Qual é o estado da tarefa?:</label>
+                <label class="modal-label modal-margin-bottom">Qual é o estado da tarefa?</label>
                 <div class="modal-state-options">
                     <label class="container">Planejadas
                         <input type="radio" id="planned" value="planned" name="task-state" checked="checked">
