--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,10 +10,23 @@
     <link rel="stylesheet" href="css/modal-style.css">
     <title>Task manager</title>
 </head>
+
 <body>
-    <h1>hello</h1>
+    <header>
+        <div class="stripe-task">
+            <div class="stripe-title">
+                <h2>Task manager</h2>
+            </div>
+            <div type="button" class="button-add-task">
+                <h3>New task</h3>
+            </div>
+        </div>
+    </header>
 </body>
-<script src="scripts/scripts.js"></script>
-<script src="scripts/drag-and-drop.js"></script>
-<script src="scripts/modal.js"></script>
+<footer>
+    <script src="scripts/scripts.js"></script>
+    <script src="scripts/drag-and-drop.js"></script>
+    <script src="scripts/modal.js"></script>
+</footer>
+
 </html>
