--- a/index.html
+++ b/index.html
@@ -25,31 +25,31 @@
             <div class="stripe-title">
                 <h2>Task manager</h2>
             </div>
-            <div type="button" class="button-add-task">
-                <h3>New task</h3>
+            <div type="button" class="button-add-task" id="new-task-button">
+                <h3 id="new-task-text">New task</h3>
             </div>
         </div>
     </header>
-<main>
-      <div class="content">
-        <div class="status-column">
-          <h1>ToDo</h1>
-          <div class="dropzone"></div>
+    <main>
+        <div class="content">
+            <div class="status-column">
+                <h1>ToDo</h1>
+                <div class="dropzone"></div>
+            </div>
+            <div class="status-column">
+                <h1>Doing</h1>
+                <div class="dropzone"></div>
+            </div>
+            <div class="status-column">
+                <h1>In Review</h1>
+                <div class="dropzone"></div>
+            </div>
+            <div class="status-column">
+                <h1>Done</h1>
+                <div class="dropzone"></div>
+            </div>
         </div>
-        <div class="status-column">
-          <h1>Doing</h1>
-          <div class="dropzone"></div>
-        </div>
-        <div class="status-column">
-          <h1>In Review</h1>
-          <div class="dropzone"></div>
-        </div>
-        <div class="status-column">
-          <h1>Done</h1>
-          <div class="dropzone"></div>
-        </div>
-      </div>
-    <button id="new-task-button" class="modal-button modal-button-confirm">Nova tarefa</button>
+    </main>
     <div class="modal-fade modal-invisible" id="modal-fade">
         <div class="modal-body">
             <div class="flex-space-between-align-center modal-margin-bottom">
@@ -95,9 +95,9 @@
             <button id="add-task-button" class="modal-button modal-button-confirm">Adicionar tarefa</button>
         </div>
     </div>
-  </main>
 </body>
 <script src="scripts/scripts.js"></script>
 <script src="scripts/drag-and-drop.js"></script>
 <script src="scripts/modal.js"></script>
+
 </html>
